ruka-lang.org/src/lib/interpreter/fixtures/ok/destructuring.ruka
let swap = (a, b) do [int, int].{b, a}

let minmax = (a, b) -> [int, int] do
    if a < b do .{a, b}
    else .{b, a}
end

let main = () do
    let {x, y} = swap(3, 7)
    ruka.println("swap(3, 7) = ${x}, ${y}")

    let {lo, hi} = minmax(10, 4)
    ruka.println("minmax(10, 4) = ${lo}, ${hi}")
end
