ruka-lang.org/src/lib/interpreter/fixtures/type-err/variant-record-on-non-record.ruka
// expect: not a record
let Box = variant { wrap: int }

let main = () do
	let b: Box = wrap(7)
	match b with
		wrap({a, b}) do "x"
	end
end
